# model2vec.rs

./: Cargo.toml  LICENSE  README.md
model2vec_core/: Cargo.toml
model2vec_core/src/: config.rs  distill.rs  lib.rs  main.rs  model.rs  postprocess.rs
model2vec_distill/: Cargo.toml
model2vec_infer/: Cargo.toml  emb_rust.npy
model2vec_infer/examples/: bge.rs
model2vec_infer/src/: lib.rs
model2vec_server/: Cargo.toml
model2vec_server/src/: main.rs
reference/: example_data.json  model2vec_ref.py
